kubernetes/apps/monitoring/goldilocks/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
spec:
  hostnames:
    - "goldilocks.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: kube-system
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
